remove jextract class mode. Make source mode the default