@@ -32,16 +32,9 @@ import static org.testng.Assert.*;
 import test.jextract.nestedtypes.*;
 
 /*
- * @test id=classes
+ * @test id
  * @library /lib
  * @run main/othervm JtregJextract -t test.jextract.nestedtypes nested_types.h
- * @build TestNestedTypes
- * @run testng/othervm --enable-native-access=ALL-UNNAMED TestNestedTypes
- */
-/*
- * @test id=sources
- * @library /lib
- * @run main/othervm JtregJextractSources -t test.jextract.nestedtypes nested_types.h
  * @build TestNestedTypes
  * @run testng/othervm --enable-native-access=ALL-UNNAMED TestNestedTypes
  */
