@@ -31,16 +31,9 @@ import static org.testng.Assert.assertEquals;
 import static org.testng.Assert.assertTrue;
 
 /*
- * @test id=classes
+ * @test id
  * @library /lib
  * @run main/othervm JtregJextract -t test.jextract.nestedtypes.names nested_types_names.h
- * @build TestNestedTypesNames
- * @run testng/othervm --enable-native-access=ALL-UNNAMED TestNestedTypesNames
- */
-/*
- * @test id=sources
- * @library /lib
- * @run main/othervm JtregJextractSources -t test.jextract.nestedtypes.names nested_types_names.h
  * @build TestNestedTypesNames
  * @run testng/othervm --enable-native-access=ALL-UNNAMED TestNestedTypesNames
  */
