@@ -33,20 +33,11 @@ import test.jextract.test8244412.*;
 import static test.jextract.test8244412.test8244412_h.*;
 
 /*
- * @test id=classes
+ * @test id
  * @library /lib
  * @bug 8244412
  * @summary jextract should generate static utils class for primitive typedefs
  * @run main/othervm JtregJextract -t test.jextract.test8244412 test8244412.h
- * @build LibTest8244412Test
- * @run testng/othervm --enable-native-access=ALL-UNNAMED LibTest8244412Test
- */
-/*
- * @test id=sources
- * @library /lib
- * @bug 8244412
- * @summary jextract should generate static utils class for primitive typedefs
- * @run main/othervm JtregJextractSources -t test.jextract.test8244412 test8244412.h
  * @build LibTest8244412Test
  * @run testng/othervm --enable-native-access=ALL-UNNAMED LibTest8244412Test
  */
