@@ -32,20 +32,11 @@ import test.jextract.arrayparam.*;
 import static test.jextract.arrayparam.arrayparam_h.*;
 
 /*
- * @test id=classes
+ * @test id
  * @bug 8252121
  * @summary jextract generated code fails with ABI for typedefed array type parameters
  * @library /lib
  * @run main/othervm JtregJextract -t test.jextract.arrayparam -l Arrayparam arrayparam.h
- * @build Test8252121
- * @run testng/othervm --enable-native-access=ALL-UNNAMED Test8252121
- */
-/*
- * @test id=sources
- * @bug 8252121
- * @summary jextract generated code fails with ABI for typedefed array type parameters
- * @library /lib
- * @run main/othervm JtregJextractSources -t test.jextract.arrayparam -l Arrayparam arrayparam.h
  * @build Test8252121
  * @run testng/othervm --enable-native-access=ALL-UNNAMED Test8252121
  */
